[type]:   fix [module]: widgets/css [id]:     #t-75226, #t-74145 [desc]:   Fixed alignment of boxLabel and fieldLabel for check/radio items. Also fixed an issue with DisplayField not aligning correctly.
git-svn-id: http://code.extjs.com/svn/ext/trunk@4939 c0a82769-a6a8-4f8a-96ba-7530dc2e272d

--- a/resources/css/structure/form.css
+++ b/resources/css/structure/form.css
@@ -70,11 +70,16 @@ textarea {
 /* 2.0.2 style */
 .x-form-check-wrap {
     line-height:18px;
+    height: 22px;
 }
 
 .ext-ie .x-form-check-wrap input {
     width:15px;
     height:15px;
+}
+
+.x-form-check-wrap input{
+    vertical-align: bottom;
 }
 
 .x-editor .x-form-check-wrap {
@@ -187,23 +192,6 @@ textarea {
     visibility:hidden;
     padding:0;
     margin:0;
-}
-.x-form-check-wrap {
-    height: 22px;
-    line-height:18px;
-}
-
-.ext-ie .x-form-check-wrap input {
-    width:15px;
-    height:15px;
-}
-
-.x-editor .x-form-check-wrap {
-    padding:3px;
-}
-
-.x-editor .x-form-checkbox {
-    height:13px;
 }
 
 .x-form-grow-sizer {
@@ -342,33 +330,38 @@ textarea {
     font-size:0;
 }
 
+.ext-ie6 .x-form-check-wrap input, .ext-border-box .x-form-check-wrap input{
+   margin-top: 3px; 
+}
+
 .x-form-cb-label {
-    padding:3px;
-    padding-left:0;
     position: relative;
     margin-left:4px;
-    top: -2px;
+    top: 2px;
+}
+
+.ext-ie .x-form-cb-label{
+    top: 1px;
+}
+
+.ext-ie6 .x-form-cb-label, .ext-border-box .x-form-cb-label{
+    top: 3px;
 }
 
 .x-form-display-field{
+    padding-top: 2px;
+}
+
+.ext-gecko .x-form-display-field, .ext-strict .ext-ie7 .x-form-display-field{
+    padding-top: 1px;
+}
+
+.ext-ie .x-form-display-field{
     padding-top: 3px;
 }
 
-.ext-gecko2 .x-form-cb-label{
-    top: -1px;
-}
-
-.ext-ie8 .x-form-cb-label{
-    position: static;
-}
-
-.ext-strict .ext-ie8 .x-form-cb-label {
-    top: -3px;
-    position: relative;
-}
-
-.ext-opera .x-form-cb-label, .ext-safari3 .x-form-cb-label, .ext-ie7 .x-form-cb-label, .ext-ie6 .x-form-cb-label {
-    top: 0;
+.ext-strict .ext-ie8 .x-form-display-field{
+    padding-top: 0;
 }
 
 .x-form-column {
